added to readme

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <div class="row"></div>
       <!-- Timeblocks go here -->
     </div>
 
