--- a/index.html
+++ b/index.html
@@ -29,12 +29,85 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <div class="row"></div>
-      <!-- Timeblocks go here -->
+      
+      <!-- Timeblock rows created with 3 different colums, one displays the time, one is where the text is input, and one is the button for the click event -->
+    <div id="block1" class="row time-block">
+      <div class="col-md-1 hour">9AM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
     </div>
+    
+    <div id="block2" class="row time-block">
+      <div class="col-md-1 hour">10AM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block3" class="row time-block">
+      <div class="col-md-1 hour">11AM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block4" class="row time-block">
+      <div class="col-md-1 hour">12PM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block5" class="row time-block">
+      <div class="col-md-1 hour">1PM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block6" class="row time-block">
+      <div class="col-md-1 hour">2PM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block7" class="row time-block">
+      <div class="col-md-1 hour">3PM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block8" class="row time-block">
+      <div class="col-md-1 hour">4PM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+
+    <div id="block9" class="row time-block">
+      <div class="col-md-1 hour">5PM</div>
+      <textarea class="col-md-10 input"></textarea>
+      <button class="btn saveBtn col-md-1">
+      <i class="fas fa-save"></i>  
+      </button>
+    </div>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <!-- link to javascript file -->
     <script src="script.js"></script>
   </body>
 </html>
