--- a/index.html
+++ b/index.html
@@ -1,113 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      
-      <!-- Timeblock rows created with 3 different colums, one displays the time, one is where the text is input, and one is the button for the click event -->
-    <div id="block1" class="row time-block">
-      <div class="col-md-1 hour">9AM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  
+  </header>
+  <div class="container">
+    <!-- Timeblock rows created with 3 different colums, one displays the time, one is where the text is input, and one is the button for the click event -->
+  <!-- made sure the elements and classes paired with existing CSS stylesheet -->
+    <div class="row time-block">
+      <h6 class="hour col-md-1">9AM</h6>
+      <textarea name="entry" id="9" class="entry col-md-10"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
-    
-    <div id="block2" class="row time-block">
-      <div class="col-md-1 hour">10AM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+  
+
+    <div class= "row time-block">
+      <h6 class="hour col-md-1">10AM</h6>
+      <textarea name="entry" id="10"  class="entry col-md-10"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block3" class="row time-block">
-      <div class="col-md-1 hour">11AM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">11AM</h6>
+      <textarea name="entry" id="11"  class="entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block4" class="row time-block">
-      <div class="col-md-1 hour">12PM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">12PM</h6>
+      <textarea name="entry" id="12" class="entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block5" class="row time-block">
-      <div class="col-md-1 hour">1PM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">1PM</h6>
+      <textarea name="entry" id="13"  class="entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block6" class="row time-block">
-      <div class="col-md-1 hour">2PM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">2PM</h6>
+      <textarea name="entry" id="14"  class=" entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block7" class="row time-block">
-      <div class="col-md-1 hour">3PM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">3PM</h6>
+      <textarea name="entry" id="15"  class="entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block8" class="row time-block">
-      <div class="col-md-1 hour">4PM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">4PM</h6>
+      <textarea name="entry" id="16" class=" entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
 
-    <div id="block9" class="row time-block">
-      <div class="col-md-1 hour">5PM</div>
-      <textarea class="col-md-10 input"></textarea>
-      <button class="btn saveBtn col-md-1">
-      <i class="fas fa-save"></i>  
+    <div class="row time-block">
+      <h6 class="hour col-md-1">5PM</h6>
+      <textarea name="entry" id="17" class="entry col-md-10 input"></textarea>
+      <button class="saveBtn col-md-1">
+        <i class="fas fa-save"></i>
       </button>
     </div>
-    </div>
+  </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <!-- link to javascript file -->
-    <script src="script.js"></script>
-  </body>
+  <script src="./script.js"></script>
+</body>
+
 </html>
