--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
   </div>
 
-
+<!-- links for jquery and momentjs -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <!-- link to javascript file -->
